# gki_3dnav

./: todos
compute_freespace_mechanism_heuristic/: CMakeLists.txt  package.xml
compute_freespace_mechanism_heuristic/include/freespace_mechanism_heuristic/: freespace_mechanism_heuristic.h
compute_freespace_mechanism_heuristic/src/: compute_heuristic.cpp  freespace_mechanism_heuristic.cpp  print_costmap_images.cpp
freespace_mechanism_heuristic/: CMakeLists.txt  package.xml
freespace_mechanism_heuristic/include/freespace_mechanism_heuristic/: freespace_mechanism_heuristic.h
freespace_mechanism_heuristic/src/: compute_heuristic.cpp  freespace_mechanism_heuristic.cpp
full_body_nav_msgs/: CMakeLists.txt
gki_3dnav_planner/: CMakeLists.txt  nav3d_plugin.xml  package.xml  readme_eval.md
gki_3dnav_planner/config/: bonirob_0.15_16_plussideways.mprim  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params_close.yaml  pr2_5cm_plussideways.mprim  pr2_5cm_plussidewaysplussmalldiag.mprim  sbpl_global_params.yaml  traversableMap-freespace.ppm  traversableMap-freespace.xcf  traversableMap-freespace_small.ppm  traversableMap-freespace_small.xcf  traversableMap-rows.ppm  traversableMap-rows.xcf  traversableMap-rows_small.ppm  traversableMap-rows_small.xcf  traversableMap-wall.ppm  traversableMap-wall.xcf  traversableMap-wall_small.ppm  traversableMap-wall_small.xcf  traversableMap.ppm
gki_3dnav_planner/include/gki_3dnav_planner/: 3dnav_planner.h  (+10 more)
gki_3dnav_planner/launch/: amcl.launch  gazebo.launch  move_base_3dnav.launch  nav_stack.launch  octomap_server.launch
gki_3dnav_planner/scripts/: analyze_queries.py
gki_3dnav_planner/src/: 3dnav_planner.cpp  3dnav_planner_flourish.cpp  VisualPathPlannerNode.cpp  VisualPathPlannerNode.h  environment_navxythetalat_flourish.cpp  environment_navxythetalat_generic.cpp  environment_navxythetalat_moveit.cpp  environment_xyt_3d_collisions.cpp  evaluate_pose_queries.cpp  flourish_planner.cpp  layer_manager.cpp  sample_valid_poses.cpp  sbpl_xytheta_planner.cpp
pose_follower_3d/: CMakeLists.txt  blp_plugin.xml
pose_follower_3d/src/: pose_follower_3d.cpp
visualization/: CMakeLists.txt  gki_3dnav_path_rviz_plugin_description.xml  gki_3dnav_slice_rviz_plugin_description.xml  package.xml  setup.py
visualization/gki_3dnav_path_rviz_plugin/: CMakeLists.txt
visualization/gki_3dnav_path_rviz_plugin/include/gki_3dnav_path_rviz_plugin/: gki_3dnav_path_display.h
visualization/gki_3dnav_path_rviz_plugin/src/: gki_3dnav_path_display.cpp  plugin_init.cpp
visualization/gki_3dnav_slice_rviz_plugin/: CMakeLists.txt
visualization/gki_3dnav_slice_rviz_plugin/include/gki_3dnav_slice_rviz_plugin/: gki_3dnav_slice_display.h
visualization/gki_3dnav_slice_rviz_plugin/src/: gki_3dnav_slice_display.cpp  plugin_init.cpp
